[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/ui/help_dialog2.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/sounds/ui/UI_Menu_Close_02.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/audio/sounds/ui/UI_Menu_Open_03.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/fonts/text_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/text_large.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/audio/sounds/ambience/AMB_Ship_Near_Human_4.wav" type="AudioStream" id=6]

[node name="HelpDialog2" type="AcceptDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -476.0
margin_top = -241.5
margin_right = 476.0
margin_bottom = 241.5
window_title = "Help  (Game is paused)"
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = -36.0

[node name="TabContainer" type="TabContainer" parent="MarginContainer"]
margin_right = 936.0
margin_bottom = 439.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Overview" type="Control" parent="MarginContainer/TabContainer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/TabContainer/Overview"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Navigation" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/TabContainer/Navigation"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Structure Management" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/TabContainer/Structure Management"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Construction" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/TabContainer/Construction"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Structures" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/TabContainer/Structures"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resources" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/TabContainer/Resources"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Power" type="Control" parent="MarginContainer/TabContainer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 32.0
margin_right = -4.0
margin_bottom = -4.0

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/TabContainer/Power"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/bold_font = ExtResource( 5 )
custom_fonts/normal_font = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogOpenStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -3.0
bus = "UI"

[node name="DialogCloseStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -3.0
bus = "UI"

[node name="TabSwitchStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -3.0
bus = "UI"
[connection signal="about_to_show" from="." to="." method="_on_HelpDialog2_about_to_show"]
[connection signal="popup_hide" from="." to="." method="_on_HelpDialog2_popup_hide"]
[connection signal="tab_changed" from="MarginContainer/TabContainer" to="." method="_on_TabContainer_tab_changed"]
